# timex-datalink

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  flake.nix  index.html  renovate.json  wasm_timex.js
.github/workflows/: renovate.yml  rust-tests.yml
examples/: protocol3_example.rs  protocol4_example.rs
examples/json/: main.rs
src/: char_encoders.rs  lib.rs  lib_wasm.rs  notebook_adapter.rs  oneplus6_led_adapter.rs
src/client/: protocol4.rs
src/client/helpers/: char_encoders.rs  crc_packets_wrapper.rs  length_packet_wrapper.rs
src/devices/: mod.rs  timex_datalink_150.rs
src/helpers/: cpacket_paginator.rs  crc_packets_wrapper.rs  mod.rs
src/protocol_3/: alarm.rs  eeprom.rs  end.rs  mod.rs  sound_options.rs  sound_theme.rs  start.rs  sync.rs  time.rs  wrist_app.rs
src/protocol_3/eeprom/: anniversary.rs  appointment.rs  list.rs  phone_number.rs
src/protocol_4/: alarm.rs  eeprom.rs  end.rs  mod.rs  sound_options.rs  sound_theme.rs  start.rs  sync.rs  time.rs  wrist_app.rs
src/protocol_4/eeprom/: anniversary.rs  appointment.rs  list.rs  phone_number.rs
tests/: mod.rs
tests/protocol4/: alarm.rs  mod.rs  start.rs  sync.rs  time.rs
tests/protocol4/eeprom/: anniversary.rs  appointment.rs  mod.rs
webapp/public/: app.js  google.js  index.html  style.css
