[package]
name = "timex-datalink"
version = "0.1.0"
edition = "2021"

[dependencies]
crc16 = "0.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
serial2 = "0.2.26"
chrono = "0.4.31"
clap = "4.5.5"

# Include fixtures directory in the package for tests
[package.metadata]
include = ["fixtures/**/*"]

[[example]]
name = "protocol3_example"
path = "examples/protocol3_example.rs"

[[example]]
name = "protocol4_example"
path = "examples/protocol4_example.rs"

