[package]
name = "timex-datalink"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the Timex Datalink protocol for communicating with Timex watches"
license = "MIT"

[lib]
name = "timex_datalink"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
crc16 = "0.4.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
chrono = { version = "0.4.40", features = ["wasmbind"] }
clap = { version = "4.5.32", optional = true }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"

# Only include serial2 when not targeting wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serial2 = "0.2.28"

# These dependencies are only needed when targeting wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    "console", 
    "Window", 
    "Document",
    "HtmlElement",
    "Element"
]}

# Include fixtures directory in the package for tests
[package.metadata]
include = ["fixtures/**/*"]
wasm-opt = false

[features]
default = ["native"]
native = ["clap"]
wasm = []

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[[example]]
name = "protocol3_example"
path = "examples/protocol3_example.rs"

[[example]]
name = "protocol4_example"
path = "examples/protocol4_example.rs"

# No duplicate lib section needed